--- a/miniRAG.ipynb
+++ b/miniRAG.ipynb
@@ -48,8 +48,8 @@
     "embedding_model=Jinaembedding()\n",
     "db=Vectordatabase()\n",
     "db.load_vector()\n",
-    "text=\"我想要打开儿童锁\"\n",
-    "result=db.query(text,embedding_model,1)\n",
+    "text=\"如何打开后背箱？\"\n",
+    "result=db.query(text,embedding_model,3)\n",
     "print(result)"
    ]
   },
